# valutico-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/pavol/: constants.py  types.py  utils.py
src/pavol/consumer_queries/: avg_speed_5m.py  fastest_vehicle_over_time.py  radius_check.py  total_distance.py
src/pavol/entrypoint/: consumer.py  enricher.py  producer.py
